Fixed an IE6 bug where after closing a modal window you could no longer select text or focus an input. This was because the modalFix was still covering everything up.

--- a/mocha-ui/css/ui.css
+++ b/mocha-ui/css/ui.css
@@ -585,7 +585,7 @@ body {
 	opacity: 0;
 	filter: alpha(opacity=0);
 	-moz-opacity: 0;
-	z-index: 9500;
+	z-index: 9999;
 }
 
 /* Overlay */
